src/parser/snapshots/texlab__parser__latex__tests__parse@issue_857.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/issue_857.txt
---
ROOT@0..16
  PREAMBLE@0..16
    COMMAND_DEFINITION@0..11
      COMMAND_NAME@0..11 "\\newcommand"
    GENERIC_COMMAND@11..16
      COMMAND_NAME@11..14 "\\ö"
      CURLY_GROUP@14..16
        L_CURLY@14..15 "{"
        R_CURLY@15..16 "}"

