src/parser/snapshots/texlab__parser__latex__tests__parse@latex_include_equality_sign.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/include/latex_include_equality_sign.txt
---
ROOT@0..17
  PREAMBLE@0..17
    LATEX_INCLUDE@0..17
      LATEX_INCLUDE_NAME@0..8 "\\include"
      CURLY_GROUP_WORD_LIST@8..17
        L_CURLY@8..9 "{"
        KEY@9..16
          WORD@9..12 "foo"
          EQUALITY_SIGN@12..13 "="
          WORD@13..16 "bar"
        R_CURLY@16..17 "}"

