src/parser/snapshots/texlab__parser__latex__tests__parse@latex_input_path_brackets.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/include/latex_input_path_brackets.txt
---
ROOT@0..20
  PREAMBLE@0..20
    LATEX_INCLUDE@0..20
      LATEX_INCLUDE_NAME@0..6 "\\input"
      CURLY_GROUP_WORD_LIST@6..20
        L_CURLY@6..7 "{"
        KEY@7..19
          WORD@7..10 "foo"
          L_BRACK@10..11 "["
          WORD@11..14 "bar"
          R_BRACK@14..15 "]"
          WORD@15..19 ".tex"
        R_CURLY@19..20 "}"

