src/parser/snapshots/texlab__parser__latex__tests__parse@structure_nested.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/structure/structure_nested.txt
---
ROOT@0..90
  PREAMBLE@0..90
    PART@0..90
      PART_NAME@0..5 "\\part"
      CURLY_GROUP@5..8
        L_CURLY@5..6 "{"
        TEXT@6..7
          WORD@6..7 "1"
        R_CURLY@7..8 "}"
      CHAPTER@8..90
        CHAPTER_NAME@8..16 "\\chapter"
        CURLY_GROUP@16..19
          L_CURLY@16..17 "{"
          TEXT@17..18
            WORD@17..18 "2"
          R_CURLY@18..19 "}"
        SECTION@19..90
          SECTION_NAME@19..27 "\\section"
          CURLY_GROUP@27..30
            L_CURLY@27..28 "{"
            TEXT@28..29
              WORD@28..29 "3"
            R_CURLY@29..30 "}"
          SUBSECTION@30..90
            SUBSECTION_NAME@30..41 "\\subsection"
            CURLY_GROUP@41..44
              L_CURLY@41..42 "{"
              TEXT@42..43
                WORD@42..43 "4"
              R_CURLY@43..44 "}"
            SUBSUBSECTION@44..90
              SUBSUBSECTION_NAME@44..58 "\\subsubsection"
              CURLY_GROUP@58..61
                L_CURLY@58..59 "{"
                TEXT@59..60
                  WORD@59..60 "5"
                R_CURLY@60..61 "}"
              PARAGRAPH@61..90
                PARAGRAPH_NAME@61..71 "\\paragraph"
                CURLY_GROUP@71..74
                  L_CURLY@71..72 "{"
                  TEXT@72..73
                    WORD@72..73 "6"
                  R_CURLY@73..74 "}"
                SUBPARAGRAPH@74..90
                  SUBPARAGRAPH_NAME@74..87 "\\subparagraph"
                  CURLY_GROUP@87..90
                    L_CURLY@87..88 "{"
                    TEXT@88..89
                      WORD@88..89 "7"
                    R_CURLY@89..90 "}"

