src/parser/snapshots/texlab__parser__latex__tests__parse@svg_include_simple.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/include/svg_include_simple.txt
---
ROOT@0..24
  PREAMBLE@0..24
    SVG_INCLUDE@0..24
      SVG_INCLUDE_NAME@0..11 "\\includesvg"
      CURLY_GROUP_WORD_LIST@11..24
        L_CURLY@11..12 "{"
        KEY@12..23
          WORD@12..23 "foo/bar.svg"
        R_CURLY@23..24 "}"

